--- a/app/frontend/src/components/NameInfo.css
+++ b/app/frontend/src/components/NameInfo.css
@@ -15,6 +15,10 @@
   gap: 4px;
 }
 
+.name-subinfo-top-padding {
+  padding-top: 3px;
+}
+
 .country-flag {
   line-height: 15px;
   margin-top: 2px;
